Modifiqué el build y los test. Çambié las librerías