@@ -1,89 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- You may freely edit this file. See commented blocks below for -->
-<!-- some examples of how to customize the build. -->
-<!-- (If you delete it and reopen the project it will be recreated.) -->
-<!-- By default, only the Clean and Build commands use this build script. -->
-<!-- Commands such as Run, Debug, and Test only use this build script if -->
-<!-- the Compile on Save feature is turned off for the project. -->
-<!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
-<!-- in the project's Project Properties dialog box.-->
-<project name="ForoPruebas" default="default" basedir=".">
-    <description>Builds, tests, and runs the project ForoPruebas.</description>
-    <target name="test" depends="-pre-compile-test">
-    <mkdir dir="test-reports"/>
-    <junit printsummary="yes" haltonfailure="yes">
-        <classpath>
-            <pathelement location="build/classes"/>
-            <pathelement location="lib/junit-4.13.2.jar"/>
-            <pathelement location="lib/hamcrest-core-1.3.jar"/>
-        </classpath>
-        <formatter type="plain"/>
-        <batchtest todir="test-reports">
-            <fileset dir="test">
-                <include name="**/*Test.java"/>
-            </fileset>
-        </batchtest>
-    </junit>
+<project name="ForoPruebas" default="test" basedir=".">
+    
+    <!-- Propiedades -->
+    <property name="src.dir" location="src"/>
+    <property name="test.dir" location="test"/>
+    <property name="build.dir" location="build"/>
+    <property name="build.classes.dir" location="${build.dir}/classes"/>
+    <property name="build.test.dir" location="${build.dir}/test/classes"/>
+    <property name="lib.dir" location="lib"/>
+    <property name="reports.dir" location="test-reports"/>
+
+    <!-- Classpath -->
+    <path id="test.classpath">
+        <pathelement location="${build.classes.dir}"/>
+        <pathelement location="${build.test.dir}"/>
+        <fileset dir="${lib.dir}" includes="*.jar"/>
+    </path>
+
+    <!-- Target: clean -->
+    <target name="clean">
+        <delete dir="${build.dir}"/>
+        <delete dir="${reports.dir}"/>
+    </target>
+
+    <!-- Target: compile -->
+    <target name="compile">
+        <mkdir dir="${build.classes.dir}"/>
+        <javac srcdir="${src.dir}" 
+               destdir="${build.classes.dir}" 
+               includeantruntime="false"
+               source="23"
+               target="23"/>
+    </target>
+
+    <!-- Target: compile-tests -->
+    <target name="compile-tests" depends="compile">
+        <mkdir dir="${build.test.dir}"/>
+        <javac srcdir="${test.dir}" 
+               destdir="${build.test.dir}" 
+               includeantruntime="false"
+               source="23"
+               target="23">
+            <classpath refid="test.classpath"/>
+        </javac>
+    </target>
+
+<target name="test" depends="compile-tests">
+    <mkdir dir="${reports.dir}"/>
+    
+    <!-- Usar la versión standalone que incluye todo -->
+    <java jar="${lib.dir}/junit-platform-console-standalone-1.11.0.jar"
+          fork="true"
+          failonerror="true">
+        <jvmarg value="--add-modules=ALL-SYSTEM"/>
+        <arg value="--scan-classpath"/>
+        <arg value="--include-classname=.*Test"/>
+        <arg value="--class-path"/>
+        <arg path="${toString:test.classpath}"/>
+    </java>
 </target>
-    <import file="nbproject/build-impl.xml"/>
-    <!--
+<!-- Target para ejecutar una sola clase de prueba -->
+<target name="test-single" depends="compile-tests">
+    <java jar="${lib.dir}/junit-platform-console-standalone-1.11.0.jar"
+          fork="true">
+        <arg value="--select-class=${test.class}"/>
+        <arg value="--class-path=${toString:test.classpath}"/>
+    </java>
+</target>
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
-
-      -pre-init:                 called before initialization of project properties
-      -post-init:                called after initialization of project properties
-      -pre-compile:              called before javac compilation
-      -post-compile:             called after javac compilation
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-jar:                  called before JAR building
-      -post-jar:                 called after JAR building
-      -post-clean:               called after cleaning build products
-
-    (Targets beginning with '-' are not intended to be called on their own.)
-
-    Example of inserting an obfuscator after compilation could look like this:
-
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
-
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
-
-
-    Another way to customize the build is by overriding existing main targets.
-    The targets of interest are: 
-
-      -init-macrodef-javac:     defines macro for javac compilation
-      -init-macrodef-junit:     defines macro for junit execution
-      -init-macrodef-debug:     defines macro for class debugging
-      -init-macrodef-java:      defines macro for class execution
-      -do-jar:                  JAR building
-      run:                      execution of project 
-      -javadoc-build:           Javadoc generation
-      test-report:              JUnit report generation
-
-    An example of overriding the target for project execution could look like this:
-
-        <target name="run" depends="ForoPruebas-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that the overridden target depends on the jar target and not only on 
-    the compile target as the regular run target does. Again, for a list of available 
-    properties which you can use, check the target you are overriding in the
-    nbproject/build-impl.xml file. 
-
-    -->
+<!-- Target para ejecutar un método específico -->
+<target name="test-single-method" depends="compile-tests">
+    <java jar="${lib.dir}/junit-platform-console-standalone-1.11.0.jar"
+          fork="true">
+        <arg value="--select-method=${test.class}#${test.method}"/>
+        <arg value="--class-path=${toString:test.classpath}"/>
+    </java>
+</target>
+<!-- Target para ejecutar la aplicación -->
+<target name="run" depends="compile">
+    <java classname="Main" fork="true">
+        <classpath>
+            <pathelement path="${build.classes.dir}"/>
+            <!-- Incluye otras dependencias si las tienes -->
+            <fileset dir="${lib.dir}" includes="*.jar"/>
+        </classpath>
+    </java>
+</target>
 </project>
